Fixing sub-page

--- a/views/consumption.handlebars
+++ b/views/consumption.handlebars
@@ -136,12 +136,12 @@
 				
 				<div class="loop-blog">
 					<div class="thumb-left">
-						<a href="https://shinhanbankvay24h.com.vn/blog-tin/quy-khach-se-de-dang-tiep-can-goi-vay-cua-shinhan-bank-">
+						<a href="/quy-khach-se-de-dang">
 	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/a249c6cb182ab86936dba6f1d289692e.jpg" style="max-width:100%;" class="img-responsive" title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank " alt="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">
 					     </a>
 				    </div>
 				   <div class="name-right">
-							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/quy-khach-se-de-dang-tiep-can-goi-vay-cua-shinhan-bank-" title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">Quý khách sẽ dễ dàng tiếp cận gói va...</a></h3>
+							<h3><a href="/quy-khach-se-de-dang" title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">Quý khách sẽ dễ dàng tiếp cận gói va...</a></h3>
 							<div class="date"><i class="fa fa-clock-o"></i> 16-09-2020</div>
 											
 				</div>
@@ -153,12 +153,12 @@
 				
 				<div class="loop-blog">
 					<div class="thumb-left">
-						<a href="https://shinhanbankvay24h.com.vn/blog-tin/niem-tin-cua-nguoi-dung-lam-nen-suc-manh-cua-ngan-hang-shinhan">
+						<a href="/niem-tin-cua-nd">
 	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/34e6bd2320923ac2c0ef7e6189a20833.jpg" style="max-width:100%;" class="img-responsive" title="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan" alt="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan">
 					     </a>
 				    </div>
 				   <div class="name-right">
-							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/niem-tin-cua-nguoi-dung-lam-nen-suc-manh-cua-ngan-hang-shinhan" title="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan">Niềm tin của người dùng làm nên sức ...</a></h3>
+							<h3><a href="/niem-tin-cua-nd" title="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan">Niềm tin của người dùng làm nên sức ...</a></h3>
 							<div class="date"><i class="fa fa-clock-o"></i> 16-09-2020</div>
 											
 				</div>
@@ -170,12 +170,12 @@
 				
 				<div class="loop-blog">
 					<div class="thumb-left">
-						<a href="https://shinhanbankvay24h.com.vn/blog-tin/vay-tin-chap--vay-tieu-dung-ngan-hang-shinhanbank">
+						<a href="/vay-tin-chap-vay-tieu-dung">
 	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/a188add40d415a128d9b4ffbdb68f632.JPG" style="max-width:100%;" class="img-responsive" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank." alt="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">
 					     </a>
 				    </div>
 				   <div class="name-right">
-							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/vay-tin-chap--vay-tieu-dung-ngan-hang-shinhanbank" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">Vay tín chấp - Vay tiêu dùng ngân hà...</a></h3>
+							<h3><a href="/vay-tin-chap-vay-tieu-dung" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">Vay tín chấp - Vay tiêu dùng ngân hà...</a></h3>
 							<div class="date"><i class="fa fa-clock-o"></i> 09-09-2020</div>
 											
 				</div>
@@ -187,12 +187,12 @@
 				
 				<div class="loop-blog">
 					<div class="thumb-left">
-						<a href="https://shinhanbankvay24h.com.vn/blog-tin/thoa-trai-nghiem--hoan-trieu-diem-danh-cho-khach-hang-doanh-nghiep-hien-huu">
+						<a href="/thoa-trai-nghiem">
 	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/279cf4dee50aae9998c6ec8e87e25e59.jpg" style="max-width:100%;" class="img-responsive" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)" alt="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">
 					     </a>
 				    </div>
 				   <div class="name-right">
-							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/thoa-trai-nghiem--hoan-trieu-diem-danh-cho-khach-hang-doanh-nghiep-hien-huu" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">Thỏa trải nghiệm - Hoàn triệu điểm (...</a></h3>
+							<h3><a href="/thoa-trai-nghiem" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">Thỏa trải nghiệm - Hoàn triệu điểm (...</a></h3>
 							<div class="date"><i class="fa fa-clock-o"></i> 06-10-2020</div>
 											
 				</div>
@@ -204,12 +204,12 @@
 				
 				<div class="loop-blog">
 					<div class="thumb-left">
-						<a href="https://shinhanbankvay24h.com.vn/blog-tin/vay-tin-chap-ngan-hang-shinhan-bank-khong-the-chap-tai-san-lai-suat-thap-nhat-thi-truong">
+						<a href="/vay-tin-chap">
 	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/ab03c4fdadadd4157f0073850ce3d832.png" style="max-width:100%;" class="img-responsive" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường." alt="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">
 					     </a>
 				    </div>
 				   <div class="name-right">
-							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/vay-tin-chap-ngan-hang-shinhan-bank-khong-the-chap-tai-san-lai-suat-thap-nhat-thi-truong" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">Vay tín chấp ngân hàng Shinhan Bank ...</a></h3>
+							<h3><a href="/vay-tin-chap" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">Vay tín chấp ngân hàng Shinhan Bank ...</a></h3>
 							<div class="date"><i class="fa fa-clock-o"></i> 09-09-2020</div>
 											
 				</div>
@@ -221,12 +221,12 @@
 				
 				<div class="loop-blog">
 					<div class="thumb-left">
-						<a href="https://shinhanbankvay24h.com.vn/blog-tin/tung-bung-khai-truong-nhan-nghin-qua-tang">
+						<a href="/tung-bung-khai-truong">
 	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/bd6eaab62077069666f51a3d203f2f2a.jpg" style="max-width:100%;" class="img-responsive" title="Tưng bừng khai trương, nhận nghìn quà tặng" alt="Tưng bừng khai trương, nhận nghìn quà tặng">
 					     </a>
 				    </div>
 				   <div class="name-right">
-							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/tung-bung-khai-truong-nhan-nghin-qua-tang" title="Tưng bừng khai trương, nhận nghìn quà tặng">Tưng bừng khai trương, nhận nghìn qu...</a></h3>
+							<h3><a href="/tung-bung-khai-truong" title="Tưng bừng khai trương, nhận nghìn quà tặng">Tưng bừng khai trương, nhận nghìn qu...</a></h3>
 							<div class="date"><i class="fa fa-clock-o"></i> 06-10-2020</div>
 											
 				</div>
@@ -238,12 +238,12 @@
 				
 				<div class="loop-blog">
 					<div class="thumb-left">
-						<a href="https://shinhanbankvay24h.com.vn/blog-tin/rut-tien-TTdung">
+						<a href="/rut-tien-td">
 	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/3b05f83f529e3602eef89682a41678db.jpg" style="max-width:100%;" class="img-responsive" title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG" alt="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">
 					     </a>
 				    </div>
 				   <div class="name-right">
-							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/rut-tien-TTdung" title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT Ư...</a></h3>
+							<h3><a href="/rut-tien-td" title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT Ư...</a></h3>
 							<div class="date"><i class="fa fa-clock-o"></i> 08-06-2020</div>
 											
 				</div>
