--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -24,7 +24,7 @@
             </div>
             <div class="wrap-item-home">
                 <div class="col-md-4 col-sm-6 col-xs-12 paddingweb">
-                    <a href="#">
+                    <a href="/vay-tieu-dung">
                         <div class="item-home equalize">
 
                             <img src="https://shinhanbankvay24h.com.vn/upload/catalog/c89343e945eea8eddccbefdd47c1c766.png"
@@ -38,7 +38,7 @@
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12 paddingweb">
-                    <a href="#">
+                    <a href="/vay-the-chap-nha-dat">
                         <div class="item-home equalize">
 
                             <img src="https://shinhanbankvay24h.com.vn/upload/catalog/cf3c612d0921b472a062636dc7a58fdd.jpg"
@@ -54,7 +54,7 @@
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12 paddingweb">
-                    <a href="#">
+                    <a href="/the-tin-dung-shinhanbank">
                         <div class="item-home equalize">
 
                             <img src="https://shinhanbankvay24h.com.vn/upload/catalog/c83ecd8d31c050cf081e159111e7a696.jfif"
@@ -68,7 +68,7 @@
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12 paddingweb">
-                    <a href="#">
+                    <a href="/ho-tro-cong-nhan-va-tu-doanh">
                         <div class="item-home equalize">
 
                             <img src="https://shinhanbankvay24h.com.vn/upload/catalog/5b0e3eb901f2da618e175595c96ee068.jpg"
@@ -281,7 +281,7 @@
                 <div class="blog-item">
                     <div class="blog-img">
                         <a
-                            href="#">
+                            href="/quy-khach-se-de-dang">
                             <img class="lazy"
                                 data-original="https://shinhanbankvay24h.com.vn/upload/product/a249c6cb182ab86936dba6f1d289692e.jpg"
                                 src="https://shinhanbankvay24h.com.vn/upload/news/a249c6cb182ab86936dba6f1d289692e.jpg"
@@ -293,7 +293,7 @@
                     <div class="blog-info">
 
                         <h3><a
-                                href="#">Quý
+                                href="/quy-khach-se-de-dang">Quý
                                 khách sẽ dễ dàng tiếp cận gói vay của ...</a></h3>
                         <p>Quý khách đang có nhu cầu Vay tiêu dùng Ngân hàng nhưng còn thắc mắc về Điều kiện ...</p>
 
@@ -304,7 +304,7 @@
                 <div class="blog-item">
                     <div class="blog-img">
                         <a
-                            href="#">
+                            href="/vay-tin-chap">
                             <img class="lazy"
                                 data-original="https://shinhanbankvay24h.com.vn/upload/product/ab03c4fdadadd4157f0073850ce3d832.png"
                                 src="https://shinhanbankvay24h.com.vn/upload/news/ab03c4fdadadd4157f0073850ce3d832.png"
@@ -316,7 +316,7 @@
                     <div class="blog-info">
 
                         <h3><a
-                                href="#">Vay
+                                href="/vay-tin-chap">Vay
                                 tín chấp ngân hàng Shinhan Bank không thế chấp ...</a></h3>
                         <p>Với mục đích đáp ứng nhu cầu vay tiêu dùng, không cần thế chấp tài sản hay người ...</p>
 
@@ -326,7 +326,7 @@
             <div class="col-md-3 col-sm-6 col-xs-12 paddingweb ">
                 <div class="blog-item">
                     <div class="blog-img">
-                        <a href="#">
+                        <a href="/rut-tien-td">
                             <img class="lazy"
                                 data-original="https://shinhanbankvay24h.com.vn/upload/product/3b05f83f529e3602eef89682a41678db.jpg"
                                 src="https://shinhanbankvay24h.com.vn/upload/news/3b05f83f529e3602eef89682a41678db.jpg"
@@ -337,7 +337,7 @@
                     </div>
                     <div class="blog-info">
 
-                        <h3><a href="#">RÚT TIỀN MẶT THẺ TÍN
+                        <h3><a href="/rut-tien-td">RÚT TIỀN MẶT THẺ TÍN
                                 DỤNG LÃI SUẤT ƯU ĐÃI ...</a></h3>
                         <p>Rút Tiền Mặt Từ Thẻ Tín Dụng Với Hạn Mức 100%. Rút Tiền Mặt Thẻ Tín Dụng ...</p>
 
@@ -348,7 +348,7 @@
                 <div class="blog-item">
                     <div class="blog-img">
                         <a
-                            href="#">
+                            href="/vay-tin-chap">
                             <img class="lazy"
                                 data-original="https://shinhanbankvay24h.com.vn/upload/product/a188add40d415a128d9b4ffbdb68f632.JPG"
                                 src="https://shinhanbankvay24h.com.vn/upload/news/a188add40d415a128d9b4ffbdb68f632.JPG"
@@ -360,7 +360,7 @@
                     <div class="blog-info">
 
                         <h3><a
-                                href="#">Vay
+                                href="/vay-tin-chap">Vay
                                 tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.</a></h3>
                         <p>Vay tín chấp tiêu dùng ngân hàng Shinhanbank. </p>
 
@@ -370,7 +370,7 @@
             <div class="col-md-3 col-sm-6 col-xs-12 paddingweb ">
                 <div class="blog-item">
                     <div class="blog-img">
-                        <a href="#">
+                        <a href="/tung-bung-khai-truong">
                             <img class="lazy"
                                 data-original="https://shinhanbankvay24h.com.vn/upload/product/bd6eaab62077069666f51a3d203f2f2a.jpg"
                                 src="https://shinhanbankvay24h.com.vn/upload/news/bd6eaab62077069666f51a3d203f2f2a.jpg"
@@ -382,7 +382,7 @@
                     <div class="blog-info">
 
                         <h3><a
-                                href="#">Tưng
+                                href="/tung-bung-khai-truong">Tưng
                                 bừng khai trương, nhận nghìn quà tặng</a></h3>
                         <p>Tưng bừng khai trương, nhận nghìn quà tặng</p>
 
@@ -416,7 +416,7 @@
                 <div class="blog-item">
                     <div class="blog-img">
                         <a
-                            href="#">
+                            href="/niem-tin-cua-nd">
                             <img class="lazy"
                                 data-original="https://shinhanbankvay24h.com.vn/upload/product/34e6bd2320923ac2c0ef7e6189a20833.jpg"
                                 src="https://shinhanbankvay24h.com.vn/upload/news/34e6bd2320923ac2c0ef7e6189a20833.jpg"
@@ -427,7 +427,7 @@
                     </div>
                     <div class="blog-info">
 
-                        <h3><a href="#">
+                        <h3><a href="/niem-tin-cua-nd">
                         Niềm tin của người dùng làm nên sức mạnh của ...</a></h3>
                         <p>Ngân hàng TNHH MTV Shinhan Việt Nam (Ngân hàng Shinhan) là một trong những ngân hàng nước
                             ngoài ...</p>
@@ -490,12 +490,12 @@
             <div class="col-md-3 col-sm-6">
                 <h3 class="widget-title">SẢN PHẨM DỊCH VỤ SHINHANBANK</h3>
                 <ul>
-                    <li><a href="#">Vay Tiêu Dùng </a></li>
-                    <li><a href="#">thẻ tín dụng
+                    <li><a href="/vay-tieu-dung">Vay Tiêu Dùng </a></li>
+                    <li><a href="/the-tin-dung-shinhanbank">thẻ tín dụng
                             shinhanbank </a></li>
-                    <li><a href="#">Vay Thế Chấp Nhà
+                    <li><a href="/vay-the-chap-nha-dat">Vay Thế Chấp Nhà
                             đất</a></li>
-                    <li><a href="#">Hỗ Trợ Công
+                    <li><a href="/ho-tro-cong-nhan-va-tu-doanh">Hỗ Trợ Công
                             Nhân và Tự Doanh</a></li>
 
                 </ul>
