--- a/views/news.handlebars
+++ b/views/news.handlebars
@@ -23,14 +23,14 @@
                 <div class="col-md-3 col-sm-6 col-xs-12 paddingweb">
                 <div class="blog-item">
                 <div class="blog-img">
-                <a href="https://shinhanbankvay24h.com.vn/blog-tin/thoa-trai-nghiem--hoan-trieu-diem-danh-cho-khach-hang-doanh-nghiep-hien-huu">
+                <a href="/thoa-trai-nghiem">
                 <img class="lazy" data-original="https://shinhanbankvay24h.com.vn/upload/product/279cf4dee50aae9998c6ec8e87e25e59.jpg" src="https://shinhanbankvay24h.com.vn/upload/news/279cf4dee50aae9998c6ec8e87e25e59.jpg" alt="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">
                 </a>
                 
                 </div>
                 <div class="blog-info">
                 
-                <h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/thoa-trai-nghiem--hoan-trieu-diem-danh-cho-khach-hang-doanh-nghiep-hien-huu">Thỏa trải nghiệm - Hoàn triệu điểm (Dành ...</a></h3>
+                <h3><a href="/thoa-trai-nghiem">Thỏa trải nghiệm - Hoàn triệu điểm (Dành ...</a></h3>
                 <p>Tặng đến 5 triệu điểm thưởng dành cho Khách hàng Thẻ tín dụng Doanh nghiệp Shinhan</p>
             
                 </div>
@@ -39,14 +39,14 @@
                 <div class="col-md-3 col-sm-6 col-xs-12 paddingweb">
                 <div class="blog-item">
                 <div class="blog-img">
-                <a href="https://shinhanbankvay24h.com.vn/blog-tin/tung-bung-khai-truong-nhan-nghin-qua-tang">
+                <a href="/tung-bung-khai-truong">
                 <img class="lazy" data-original="https://shinhanbankvay24h.com.vn/upload/product/bd6eaab62077069666f51a3d203f2f2a.jpg" src="https://shinhanbankvay24h.com.vn/upload/news/bd6eaab62077069666f51a3d203f2f2a.jpg" alt="Tưng bừng khai trương, nhận nghìn quà tặng" title="Tưng bừng khai trương, nhận nghìn quà tặng">
                 </a>
                 
                 </div>
                 <div class="blog-info">
                 
-                <h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/tung-bung-khai-truong-nhan-nghin-qua-tang">Tưng bừng khai trương, nhận nghìn quà tặng</a></h3>
+                <h3><a href="/tung-bung-khai-truong">Tưng bừng khai trương, nhận nghìn quà tặng</a></h3>
                 <p>Tưng bừng khai trương, nhận nghìn quà tặng</p>
             
                 </div>
@@ -55,14 +55,14 @@
                 <div class="col-md-3 col-sm-6 col-xs-12 paddingweb">
                 <div class="blog-item">
                 <div class="blog-img">
-                <a href="https://shinhanbankvay24h.com.vn/blog-tin/quy-khach-se-de-dang-tiep-can-goi-vay-cua-shinhan-bank-">
+                <a href="/quy-khach-se-de-dang">
                 <img class="lazy" data-original="https://shinhanbankvay24h.com.vn/upload/product/a249c6cb182ab86936dba6f1d289692e.jpg" src="https://shinhanbankvay24h.com.vn/upload/news/a249c6cb182ab86936dba6f1d289692e.jpg" alt="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank " title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">
                 </a>
                 
                 </div>
                 <div class="blog-info">
                 
-                <h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/quy-khach-se-de-dang-tiep-can-goi-vay-cua-shinhan-bank-">Quý khách sẽ dễ dàng tiếp cận gói ...</a></h3>
+                <h3><a href="/quy-khach-se-de-dang">Quý khách sẽ dễ dàng tiếp cận gói ...</a></h3>
                 <p>Quý khách đang có nhu cầu Vay tiêu dùng Ngân hàng nhưng còn thắc mắc về Điều kiện ...</p>
             
                 </div>
@@ -71,14 +71,14 @@
                 <div class="col-md-3 col-sm-6 col-xs-12 paddingweb">
                 <div class="blog-item">
                 <div class="blog-img">
-                <a href="https://shinhanbankvay24h.com.vn/blog-tin/niem-tin-cua-nguoi-dung-lam-nen-suc-manh-cua-ngan-hang-shinhan">
+                <a href="/niem-tin-cua-nd">
                 <img class="lazy" data-original="https://shinhanbankvay24h.com.vn/upload/product/34e6bd2320923ac2c0ef7e6189a20833.jpg" src="https://shinhanbankvay24h.com.vn/upload/news/34e6bd2320923ac2c0ef7e6189a20833.jpg" alt="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan" title="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan">
                 </a>
                 
                 </div>
                 <div class="blog-info">
                 
-                <h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/niem-tin-cua-nguoi-dung-lam-nen-suc-manh-cua-ngan-hang-shinhan">Niềm tin của người dùng làm nên sức ...</a></h3>
+                <h3><a href="/niem-tin-cua-nd">Niềm tin của người dùng làm nên sức ...</a></h3>
                 <p>Ngân hàng TNHH MTV Shinhan Việt Nam (Ngân hàng Shinhan) là một trong những ngân hàng nước ngoài ...</p>
             
                 </div>
@@ -87,14 +87,14 @@
                 <div class="col-md-3 col-sm-6 col-xs-12 paddingweb">
                 <div class="blog-item">
                 <div class="blog-img">
-                <a href="https://shinhanbankvay24h.com.vn/blog-tin/vay-tin-chap--vay-tieu-dung-ngan-hang-shinhanbank">
+                <a href="/vay-tin-chap-vay-tieu-dung">
                 <img class="lazy" data-original="https://shinhanbankvay24h.com.vn/upload/product/a188add40d415a128d9b4ffbdb68f632.JPG" src="https://shinhanbankvay24h.com.vn/upload/news/a188add40d415a128d9b4ffbdb68f632.JPG" alt="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank." title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">
                 </a>
                 
                 </div>
                 <div class="blog-info">
                 
-                <h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/vay-tin-chap--vay-tieu-dung-ngan-hang-shinhanbank">Vay tín chấp - Vay tiêu dùng ngân ...</a></h3>
+                <h3><a href="/vay-tin-chap-vay-tieu-dung">Vay tín chấp - Vay tiêu dùng ngân ...</a></h3>
                 <p>Vay tín chấp tiêu dùng ngân hàng Shinhanbank. </p>
             
                 </div>
@@ -103,14 +103,14 @@
                 <div class="col-md-3 col-sm-6 col-xs-12 paddingweb">
                 <div class="blog-item">
                 <div class="blog-img">
-                <a href="https://shinhanbankvay24h.com.vn/blog-tin/vay-tin-chap-ngan-hang-shinhan-bank-khong-the-chap-tai-san-lai-suat-thap-nhat-thi-truong">
+                <a href="/vay-tin-chap">
                 <img class="lazy" data-original="https://shinhanbankvay24h.com.vn/upload/product/ab03c4fdadadd4157f0073850ce3d832.png" src="https://shinhanbankvay24h.com.vn/upload/news/ab03c4fdadadd4157f0073850ce3d832.png" alt="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường." title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">
                 </a>
                 
                 </div>
                 <div class="blog-info">
                 
-                <h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/vay-tin-chap-ngan-hang-shinhan-bank-khong-the-chap-tai-san-lai-suat-thap-nhat-thi-truong">Vay tín chấp ngân hàng Shinhan Bank không ...</a></h3>
+                <h3><a href="/vay-tin-chap">Vay tín chấp ngân hàng Shinhan Bank không ...</a></h3>
                 <p>Với mục đích đáp ứng nhu cầu vay tiêu dùng, không cần thế chấp tài sản hay người ...</p>
             
                 </div>
@@ -119,14 +119,14 @@
                 <div class="col-md-3 col-sm-6 col-xs-12 paddingweb">
                 <div class="blog-item">
                 <div class="blog-img">
-                <a href="https://shinhanbankvay24h.com.vn/blog-tin/rut-tien-TTdung">
+                <a href="/rut-tien-td">
                 <img class="lazy" data-original="https://shinhanbankvay24h.com.vn/upload/product/3b05f83f529e3602eef89682a41678db.jpg" src="https://shinhanbankvay24h.com.vn/upload/news/3b05f83f529e3602eef89682a41678db.jpg" alt="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG" title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">
                 </a>
                 
                 </div>
                 <div class="blog-info">
                 
-                <h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/rut-tien-TTdung">RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ...</a></h3>
+                <h3><a href="/rut-tien-td">RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ...</a></h3>
                 <p>Rút Tiền Mặt Từ Thẻ Tín Dụng Với Hạn Mức 100%.  Rút Tiền Mặt Thẻ Tín Dụng ...</p>
             
                 </div>
