--- a/views/rut-tien-td.handlebars
+++ b/views/rut-tien-td.handlebars
@@ -8,155 +8,65 @@
                    <a href=""> Trang mữ</a>
                    <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                    <span class="current">Thời Trang Nam</span>  -->
-                   <a href="https://shinhanbankvay24h.com.vn/"><i class="icon-home"></i> Trang Chủ</a>
-                                           <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
-                       <a href="/san-pham-dich-vu-shinhanbank"> SẢN PHẨM DỊCH VỤ SHINHANBANK</a>
-                       
-                                        <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
-                   <span class="current">Vay Thế Chấp Nhà đất</span>
+                   <a href="/home"><i class="icon-home"></i> Trang Chủ</a>
+                                       <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
+                   <span class="current">Tin Tức</span>
                 </div>
             </div>
         </div>
     </div>
 </div>
 <div class="container" style="margin-bottom: 17px;background-color: white;padding: 3px;">
-         <div class="row" style="margin-top: 13px">
-    <div class="col-md-9 col-sm-12 col-xs-12">
-       <div class="title-text-vaytindung">
-			        <h2>Vay Thế Chấp Nhà đất</h2>
-					<div class="content-dichvu">
-					   <div id="gioi-thieu" class="box-type row">
-<div class="ct-left col-sm-4 col-xs-12">
-<h3 class="title-blue"><img src="/public/image/hinh%20anh%20shinhan.jpg" alt="" width="492" height="289" /></h3>
-<h3 class="title-blue">Giới thiệu</h3>
-</div>
-<div class="ct-right col-sm-8 col-xs-12">
-<div class="text">
-<p>Bạn lo lắng lãi suất không ổn định hoặc thủ tục vay vốn quá phức tạp?<br />Chương trình ưu đãi lãi suất hấp dẫn từ Ngân hàng Shinhan sẽ là điểm tựa tài chính vững chắc để bạn an tâm bắt đầu hành trình an cư lạc nghiệp (*).</p>
-</div>
-<div class="list-number">
-<div class="item">
-<div class="t-left">
-<div class="line"> </div>
-<p class="t-small">LỰA CHỌN 1</p>
-</div>
-<div class="t-right">
-<div class="number">6,5<sup>%/năm</sup></div>
-<p class="t-bt">cố định năm đầu</p>
-</div>
-</div>
-<div class="item">
-<div class="t-left">
-<div class="line"> </div>
-<p class="t-small">LỰA CHỌN 2</p>
-</div>
-<div class="t-right">
-<div class="number">7,4<sup>%/năm</sup></div>
-<p class="t-bt">cố định 2 năm đầu</p>
-</div>
-</div>
-<div class="item">
-<div class="t-left">
-<div class="line"> </div>
-<p class="t-small">LỰA CHỌN 3</p>
-</div>
-<div class="t-right">
-<div class="number">8,0<sup>%/năm</sup></div>
-<p class="t-bt">cố định 3 năm đầu</p>
-</div>
-</div>
-<div class="item">
-<div class="t-left">
-<div class="line"> </div>
-<p class="t-small">LỰA CHỌN 4</p>
-</div>
-<div class="t-right">
-<div class="number">8,7<sup>%/năm</sup></div>
-<p class="t-bt">cố định 4 năm đầu</p>
-<p class="t-bt"><img src="/public/image/hinh%20anh%20shinhan%20%202.jpg" alt="" width="580" height="387" /></p>
-</div>
-</div>
-</div>
-<p>Đặc biệt, Ngân hàng Shinhan dành gói ưu đãi với lãi suất cực kỳ hấp dẫn cho các khách hàng có giao dịch thường xuyên với Ngân hàng Shinhan.</p>
-<p>(*) Liên hệ chi nhánh gần nhất để biết thêm chi tiết. Điều kiện và điều khoản áp dụng</p>
-<p>Lãi suất áp dụng từ 01/10/2020</p>
-<p><span style="color: #e03e2d; background-color: #3598db;"><span class="btn-main left"><a style="color: #e03e2d; background-color: #3598db;" href="../../">ĐĂNG KÝ VAY</a></span> </span></p>
-</div>
-</div>
-<div class="row-line"> </div>
-<div id="loi-ich" class="box-type row">
-<div class="ct-left col-sm-4 col-xs-12">
-<h3 class="title-blue">Lợi ích</h3>
-</div>
-<div class="ct-right col-sm-8 col-xs-12">
-<div class="tab-expand">
-<div class="item ">
-<div class="head">
-<div class="text">
-<p>Lãi suất ưu đãi linh hoạt, tính trên dư nợ giảm dần</p>
-</div>
-</div>
-</div>
-<div class="item ">
-<div class="head">
-<div class="text">
-<p>Tài trợ lên đến 70% giá trị tài sản đảm bảo</p>
-</div>
-</div>
-</div>
-<div class="item ">
-<div class="head">
-<div class="text">
-<p>Thời hạn vay dài lên đến 20 năm</p>
-</div>
-</div>
-</div>
-<div class="item ">
-<div class="head">
-<div class="text">
-<p>Dịch vụ chăm sóc, hỗ trợ khách hàng chu đáo</p>
-</div>
-</div>
-</div>
-</div>
-<div class="text">
-<p>*Áp dụng cho công dân cư trú tại Việt Nam (*) từ 18-65 tuổi<br />(*) Công dân Việt Nam và người nước ngoài theo quy định của Pháp luật</p>
-</div>
-</div>
-</div>
-<div class="row-line"> </div>
-<div id="ho-so-dang-ky" class="box-type row">
-<div class="ct-left col-sm-12 col-xs-12">
-<h3 class="title-blue">Hồ sơ đăng ký</h3>
-</div>
-<div class="ct-right col-sm-12 col-xs-12">
-<div class="list-item-required">
-<div class="item col-sm-6 col-xs-12">
-<div class="box">
-<div class="icon"><img src="https://shinhan.com.vn/public/uploads/corporate/Valid-ID-Passport.png" alt="" /></div>
-<p>CMND/Hộ chiếu còn hiệu lực</p>
-</div>
-</div>
-<div class="item col-sm-6 col-xs-12">
-<div class="box">
-<div class="icon"><img src="https://shinhan.com.vn/public/uploads/corporate/family-record-book-KT3-temporary-residence.png" alt="" /></div>
-<p>Sổ hộ khẩu thường trú/sổ tạm trú/KT3/giấy xác nhận tạm trú</p>
-</div>
-</div>
-<div class="item col-sm-6 col-xs-12">
-<div class="box">
-<div class="icon"><img src="https://shinhan.com.vn/public/uploads/corporate/Evidence-of-property-ownership-if-any.png" alt="" /></div>
-<p>Chứng từ sở hữu tài sản hoặc giấy tờ hợp lệ có liên quan (nếu có)</p>
-</div>
-</div>
-</div>
-</div>
-</div>					</div>
- </div>
-      </div>
-    <div class="col-md-3 col-sm-12 col-xs-12">
-       
-<div class="widget-ct widget-categories mb-30" style="margin-top: 15px;">
+         <div class="wrapnews" idnews="56" idshowqc="1">
+<div class="row">
+   <div class="col-lg-9">
+       <div class="post-content rsimg">
+            <h1 class="post-title"><a href="#">RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG</a></h1>
+            
+            <div class="meta">
+            <span class="meta-part"><a href="#"><i class="fa fa-user" aria-hidden="true"></i> Admin</a></span>
+            <span class="meta-part"><a href="#"><i class="fa fa-calendar" aria-hidden="true"></i> 08-06-2020</a></span>
+            </div>
+            
+			<div class="intro-news">
+			   Rút Tiền Mặt Từ Thẻ Tín Dụng Với Hạn Mức 100%.  Rút Tiền Mặt Thẻ Tín Dụng Mọi Ngân Hàng Với Mức LÃI Rẻ Nhất  
+			</div>
+            <div class="wrapcontent">
+              
+               <p>BẠN ĐÃ CÓ THẺ TÍN DỤNG TẠI CÁC NGÂN HÀNG VÀ CÁC TỔ CHỨC TÀI CHÍNH</p>
+<p><img src="/rut-tien-td/../../../source/tin-tuc/cac-loai-the-tin-dung.jpg" alt="" width="660" height="456" /></p>
+<p>Nhưng lại không biếc cách sử dụng thẻ tín dụng như thế nào, không biếc về mức lãi ra sao.</p>
+<p>SAU ĐÂY LÀ MỘT SỐ CÁCH HƯỚNG DẪN RÚT TIỀN MẶT TỪ THẺ TÍN DỤNG CỦA CÁC NGÂN HÀNG MÀ BẠN ĐANG CÓ.</p>
+<p>1. Rút tiền tại trụ ATM của các ngân hàng.</p>
+<p>     Bạn có thể đi tới các trụ ATM gần nhất để rút tiền bằng cách nhập mật khẩu và rút số tiền mà bạn muốn rút</p>
+<p>     Mỗi lần bạn sẽ rút được từ 3 đến 5 tr đồng và không vượt quá 50% hạng mức thẻ.</p>
+<p>     Phí rút tiền là 4.5% trên tổng số tiền mà bạn rút ra , sau đó ngân hàng sẽ tính lãi từ ngày rút là 2.6 đến 3.5% 1 tháng</p>
+<p>2. Rút tiền bằng máy Pos</p>
+<p>     Bạn có thể rút tiền bằng máy POS của các cửa hàng hoặc các công ty có đăng kí máy Mpos</p>
+<p>     Bạn sẽ rút được tối đa hạng mức còn lại của thẻ</p>
+<p>     Phí rút tiền mà bạn phải trả cho nhân viên rút Pos là 2.3 % đến 3.5% tùy vào chỗ bạn rút thu phí như thế nào</p>
+<p>     Miễn lãi từ ngày rút đến ngày sao kê thẻ tín dụng +15 tức là sau 15 ngày tính từ ngày sao kê bạn mới đóng tiền </p>
+<p>     Khi đến hạng bạn sẽ phải thanh toán toàn bộ dư nợ bạn đã rút ra cho ngân hàng .</p>
+<p><span style="color: #e03e2d;">VÀ ĐÂY LÀ CÁCH RÚT TIỀN HIỆU QUẢ NHẤT MIỄN PHÍ RÚT MÀ LÃI SUẤT CHỈ CÓ 1.1% 1 THÁNG</span></p>
+<p><span style="color: #e03e2d;">   <span style="color: #000000;">3.    Rút tiền thông qua ứng dụng của ngân hàng</span></span></p>
+<p><span style="color: #e03e2d;"><span style="color: #000000;">         Bạn sẽ được nhân viên từ ngân hàng hỗ trợ rút tiền từ thẻ tín dụng </span></span></p>
+<p><span style="color: #e03e2d;"><span style="color: #000000;">         Được rút toàn bộ hạng mức của thẻ</span></span></p>
+<p><span style="color: #e03e2d;"><span style="color: #000000;">         Hoàn toàn miễn phí rút tiền</span></span></p>
+<p><span style="color: #e03e2d;"><span style="color: #000000;">         Lãi suất chỉ 1.1% 1 tháng</span></span></p><div class='showquangcaogiua'></div>
+<p><span style="color: #e03e2d;"><span style="color: #000000;">         Nhận được tiền sau 10 phút , tiền sẽ được chuyển thẳng vào tài khoản cá nhân của bạn nên bạn cần chuẩn bị trước số tài khoản</span></span></p>
+<p><span style="color: #e03e2d;"><span style="color: #000000;">         Nhân viên ngân hàng sẽ đến tận nơi để hướng dẫn và hoàn thiện thủ tục chuyển đổi trả góp cho bạn chỉ trong 5 phút</span></span></p>
+<p><span style="color: #e03e2d;"><span style="color: #000000;">         Điều quan trọng là không mất phí rút tiền .</span></span></p>
+<p><span style="color: #e03e2d;"><span style="color: #000000;">Hãy gọi ngay cho nhân viên Ngân hàng để được hỗ trợ .</span></span></p>
+<div class="wrap-tempale-bon row"><a class="btn-tempale" href="#"> Liên Hệ Tư Vấn  : MR phong 0862505919 zalo : 0934754919</a></div>
+<p><span style="color: #e03e2d;">         </span></p>              
+            </div>
+            
+            
+       </div>
+   </div>
+   
+   <div class="col-lg-3">
+    <div class="widget-ct widget-categories mb-30" style="margin-top: 15px;">
     <div class="widget-s-title">
     <h4>SẢN PHẨM DỊCH VỤ</h4>
     </div>
@@ -168,27 +78,10 @@
        
     </ul>
 </div>
-      
-       <div class="title-news">Tin Liên Quan</div>
+       <!-- new -->
+        <div class="title-news">Tin Liên Quan</div>
     <div class="aside-content">
          			<div class="blog-list blog-image-list">
-				
-				<div class="loop-blog">
-					<div class="thumb-left">
-						<a href="/vay-tin-chap">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/ab03c4fdadadd4157f0073850ce3d832.png" style="max-width:100%;" class="img-responsive" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường." alt="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">
-					     </a>
-				    </div>
-				   <div class="name-right">
-							<h3><a href="/vay-tin-chap" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">Vay tín chấp ngân hàng Shinhan Bank ...</a></h3>
-							<div class="date"><i class="fa fa-clock-o"></i> 09-09-2020</div>
-											
-				</div>
-			</div>
-	
-		</div>
-		<div class="clear"></div>
-					<div class="blog-list blog-image-list">
 				
 				<div class="loop-blog">
 					<div class="thumb-left">
@@ -226,23 +119,6 @@
 				
 				<div class="loop-blog">
 					<div class="thumb-left">
-						<a href="/vay-tin-chap-vay-tieu-dung">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/a188add40d415a128d9b4ffbdb68f632.JPG" style="max-width:100%;" class="img-responsive" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank." alt="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">
-					     </a>
-				    </div>
-				   <div class="name-right">
-							<h3><a href="/vay-tin-chap-vay-tieu-dung" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">Vay tín chấp - Vay tiêu dùng ngân hà...</a></h3>
-							<div class="date"><i class="fa fa-clock-o"></i> 09-09-2020</div>
-											
-				</div>
-			</div>
-	
-		</div>
-		<div class="clear"></div>
-					<div class="blog-list blog-image-list">
-				
-				<div class="loop-blog">
-					<div class="thumb-left">
 						<a href="/thoa-trai-nghiem">
 	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/279cf4dee50aae9998c6ec8e87e25e59.jpg" style="max-width:100%;" class="img-responsive" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)" alt="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">
 					     </a>
@@ -260,13 +136,30 @@
 				
 				<div class="loop-blog">
 					<div class="thumb-left">
-						<a href="/rut-tien-td">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/3b05f83f529e3602eef89682a41678db.jpg" style="max-width:100%;" class="img-responsive" title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG" alt="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">
+						<a href="/vay-tin-chap">
+	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/ab03c4fdadadd4157f0073850ce3d832.png" style="max-width:100%;" class="img-responsive" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường." alt="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">
 					     </a>
 				    </div>
 				   <div class="name-right">
-							<h3><a href="/rut-tien-td" title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT Ư...</a></h3>
-							<div class="date"><i class="fa fa-clock-o"></i> 08-06-2020</div>
+							<h3><a href="/vay-tin-chap" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">Vay tín chấp ngân hàng Shinhan Bank ...</a></h3>
+							<div class="date"><i class="fa fa-clock-o"></i> 09-09-2020</div>
+											
+				</div>
+			</div>
+	
+		</div>
+		<div class="clear"></div>
+					<div class="blog-list blog-image-list">
+				
+				<div class="loop-blog">
+					<div class="thumb-left">
+						<a href="/vay-tin-chap-vay-tieu-dung">
+	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/a188add40d415a128d9b4ffbdb68f632.JPG" style="max-width:100%;" class="img-responsive" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank." alt="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">
+					     </a>
+				    </div>
+				   <div class="name-right">
+							<h3><a href="/vay-tin-chap-vay-tieu-dung" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">Vay tín chấp - Vay tiêu dùng ngân hà...</a></h3>
+							<div class="date"><i class="fa fa-clock-o"></i> 09-09-2020</div>
 											
 				</div>
 			</div>
@@ -291,8 +184,14 @@
 		</div>
 		<div class="clear"></div>
 		  </div>
-      </div>
-</div>     </div>
+      <!-- end -->
+   
+   </div>
+   
+   
+</div>
+</div>
+     </div>
          
 		 
  
@@ -300,7 +199,7 @@
    <div class="container">
       <div class="row">
 	     <div class="title-text-vaytindung title-mr-70">
-			        <h2>TẠI SAO NÊN CHỌN Shinhanbank</h2>
+			        <h2>TẠI SAO NÊN CHỌN SHINHANBANK</h2>
 			     </div>
 				 <div class="col-md-4 col-sm-6 col-xs-12 paddingweb">
 		   <div class="item equalize">
@@ -339,7 +238,7 @@
 <div class="block-subscribe">
 <h3 class="widget-title">Giới Thiệu</h3>
 <p><p>24C Phan Đăng Lưu, Phường 6, Quận Bình Thạnh, HCM</p>
-<p>Hotline: 0707183645</p></p>
+<p>Hotline: 0862505919</p></p>
 </div>
 </div>
 <div class="col-md-3 col-sm-6">
@@ -358,10 +257,6 @@
       <input type="text" class="form-control textdangki" name="email" placeholder="Vui Lòng Nhập Email" style="margin-bottom: 5px">
       <button type="button" class="btn btn-common clickdangki">Đăng Kí</button>
 </div>
-</div>
-<div class="col-md-3 col-sm-6">
-     <h3 class="widget-title">Kết Nối Với Chúng Tôi</h3>
-     <div class="fb-page" data-href="https://www.facebook.com/H%E1%BB%97-tr%E1%BB%A3-vay-v%E1%BB%91n-ng%C3%A2n-h%C3%A0ng-100428818344689" data-tabs="timeline" data-height="120" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/H%E1%BB%97-tr%E1%BB%A3-vay-v%E1%BB%91n-ng%C3%A2n-h%C3%A0ng-100428818344689" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/H%E1%BB%97-tr%E1%BB%A3-vay-v%E1%BB%91n-ng%C3%A2n-h%C3%A0ng-100428818344689">Facebook</a></blockquote></div>
 </div>
 </div>
 </div>
