--- a/views/thoa-trai-nghiem.handlebars
+++ b/views/thoa-trai-nghiem.handlebars
@@ -9,169 +9,216 @@
                    <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                    <span class="current">Thời Trang Nam</span>  -->
                    <a href="https://shinhanbankvay24h.com.vn/"><i class="icon-home"></i> Trang Chủ</a>
-                                           <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
-                       <a href="/san-pham-dich-vu-shinhanbank"> SẢN PHẨM DỊCH VỤ SHINHANBANK</a>
-                       
-                                        <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
-                   <span class="current">Vay Thế Chấp Nhà đất</span>
+                                       <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
+                   <span class="current">Tin Tức</span>
                 </div>
             </div>
         </div>
     </div>
 </div>
 <div class="container" style="margin-bottom: 17px;background-color: white;padding: 3px;">
-         <div class="row" style="margin-top: 13px">
-    <div class="col-md-9 col-sm-12 col-xs-12">
-       <div class="title-text-vaytindung">
-			        <h2>Vay Thế Chấp Nhà đất</h2>
-					<div class="content-dichvu">
-					   <div id="gioi-thieu" class="box-type row">
-<div class="ct-left col-sm-4 col-xs-12">
-<h3 class="title-blue"><img src="/public/image/hinh%20anh%20shinhan.jpg" alt="" width="492" height="289" /></h3>
-<h3 class="title-blue">Giới thiệu</h3>
+         <div class="wrapnews" idnews="63" idshowqc="1">
+<div class="row">
+   <div class="col-lg-9">
+       <div class="post-content rsimg">
+            <h1 class="post-title"><a href="#">Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)</a></h1>
+            
+            <div class="meta">
+            <span class="meta-part"><a href="#">    <i class="fa fa-user" aria-hidden="true"></i> Admin</a></span>
+            <span class="meta-part"><a href="#">    <i class="fa fa-calendar" aria-hidden="true"></i>06-10-2020</a></span>
+            </div>
+            
+			<div class="intro-news">
+			   Tặng đến 5 triệu điểm thưởng dành cho Khách hàng Thẻ tín dụng Doanh nghiệp Shinhan  
+			</div>
+            <div class="wrapcontent">
+              
+               <div class="col-xs-12">
+<div class="box-list-dots">
+<div class="row">
+<div class="title-num col-xs-12">
+<div class="num">1</div>
+<h5>Chi tiết chương trình:</h5>
+<p>Khách hàng doanh nghiệp đạt tổng chi tiêu qua thẻ tín dụng doanh nghiệp Shinhan trong thời hạn chương trình sẽ nhận được quà tặng là điểm thưởng Shinhan.</p>
 </div>
-<div class="ct-right col-sm-8 col-xs-12">
-<div class="text">
-<p>Bạn lo lắng lãi suất không ổn định hoặc thủ tục vay vốn quá phức tạp?<br />Chương trình ưu đãi lãi suất hấp dẫn từ Ngân hàng Shinhan sẽ là điểm tựa tài chính vững chắc để bạn an tâm bắt đầu hành trình an cư lạc nghiệp (*).</p>
-</div>
-<div class="list-number">
-<div class="item">
-<div class="t-left">
-<div class="line"> </div>
-<p class="t-small">LỰA CHỌN 1</p>
-</div>
-<div class="t-right">
-<div class="number">6,5<sup>%/năm</sup></div>
-<p class="t-bt">cố định năm đầu</p>
-</div>
-</div>
-<div class="item">
-<div class="t-left">
-<div class="line"> </div>
-<p class="t-small">LỰA CHỌN 2</p>
-</div>
-<div class="t-right">
-<div class="number">7,4<sup>%/năm</sup></div>
-<p class="t-bt">cố định 2 năm đầu</p>
-</div>
-</div>
-<div class="item">
-<div class="t-left">
-<div class="line"> </div>
-<p class="t-small">LỰA CHỌN 3</p>
-</div>
-<div class="t-right">
-<div class="number">8,0<sup>%/năm</sup></div>
-<p class="t-bt">cố định 3 năm đầu</p>
-</div>
-</div>
-<div class="item">
-<div class="t-left">
-<div class="line"> </div>
-<p class="t-small">LỰA CHỌN 4</p>
-</div>
-<div class="t-right">
-<div class="number">8,7<sup>%/năm</sup></div>
-<p class="t-bt">cố định 4 năm đầu</p>
-<p class="t-bt"><img src="/public/image/hinh%20anh%20shinhan%20%202.jpg" alt="" width="580" height="387" /></p>
-</div>
-</div>
-</div>
-<p>Đặc biệt, Ngân hàng Shinhan dành gói ưu đãi với lãi suất cực kỳ hấp dẫn cho các khách hàng có giao dịch thường xuyên với Ngân hàng Shinhan.</p>
-<p>(*) Liên hệ chi nhánh gần nhất để biết thêm chi tiết. Điều kiện và điều khoản áp dụng</p>
-<p>Lãi suất áp dụng từ 01/10/2020</p>
-<p><span style="color: #e03e2d; background-color: #3598db;"><span class="btn-main left"><a style="color: #e03e2d; background-color: #3598db;" href="../../">ĐĂNG KÝ VAY</a></span> </span></p>
-</div>
-</div>
-<div class="row-line"> </div>
-<div id="loi-ich" class="box-type row">
-<div class="ct-left col-sm-4 col-xs-12">
-<h3 class="title-blue">Lợi ích</h3>
-</div>
-<div class="ct-right col-sm-8 col-xs-12">
-<div class="tab-expand">
-<div class="item ">
-<div class="head">
-<div class="text">
-<p>Lãi suất ưu đãi linh hoạt, tính trên dư nợ giảm dần</p>
-</div>
-</div>
-</div>
-<div class="item ">
-<div class="head">
-<div class="text">
-<p>Tài trợ lên đến 70% giá trị tài sản đảm bảo</p>
-</div>
-</div>
-</div>
-<div class="item ">
-<div class="head">
-<div class="text">
-<p>Thời hạn vay dài lên đến 20 năm</p>
-</div>
-</div>
-</div>
-<div class="item ">
-<div class="head">
-<div class="text">
-<p>Dịch vụ chăm sóc, hỗ trợ khách hàng chu đáo</p>
+<ul>
+<li><strong>Quà tặng:</strong></li>
+</ul>
+<div class="table-w col-xs-12">
+<table class="table table-striped table-bordered">
+<thead>
+<tr>
+<th>Tổng chi tiêu tối thiểu</th>
+<th>Quà tặng </th>
+<th>Giá trị tiền mặt tương đương</th>
+<th>Số lượng quà tặng mỗi giai đoạn</th>
+<th>Tổng số quà tặng</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><strong>70.000.000 VNĐ</strong></td>
+<td><strong> 5.000.000 điểm </strong></td>
+<td><strong>5.000.000 VNĐ</strong></td>
+<td><strong>36</strong></td>
+<td><strong>72</strong></td>
+</tr>
+</tbody>
+</table>
+<p> </p>
+<p><em>*Giải thưởng sẽ được trao theo từng giai đoạn.</em></p>
 </div>
 </div>
 </div>
 </div>
-<div class="text">
-<p>*Áp dụng cho công dân cư trú tại Việt Nam (*) từ 18-65 tuổi<br />(*) Công dân Việt Nam và người nước ngoài theo quy định của Pháp luật</p>
+<div class="box-type row">
+<div class="col-xs-12">
+<div class="box-list-dots">
+<div class="row">
+<div class="title-num col-sm-4 col-xs-12">
+<div class="num">2</div>
+<h5><strong>Sản phẩm áp dụng</strong>:</h5>
 </div>
-</div>
-</div>
-<div class="row-line"> </div>
-<div id="ho-so-dang-ky" class="box-type row">
-<div class="ct-left col-sm-12 col-xs-12">
-<h3 class="title-blue">Hồ sơ đăng ký</h3>
-</div>
-<div class="ct-right col-sm-12 col-xs-12">
-<div class="list-item-required">
-<div class="item col-sm-6 col-xs-12">
-<div class="box">
-<div class="icon"><img src="https://shinhan.com.vn/public/uploads/corporate/Valid-ID-Passport.png" alt="" /></div>
-<p>CMND/Hộ chiếu còn hiệu lực</p>
-</div>
-</div>
-<div class="item col-sm-6 col-xs-12">
-<div class="box">
-<div class="icon"><img src="https://shinhan.com.vn/public/uploads/corporate/family-record-book-KT3-temporary-residence.png" alt="" /></div>
-<p>Sổ hộ khẩu thường trú/sổ tạm trú/KT3/giấy xác nhận tạm trú</p>
-</div>
-</div>
-<div class="item col-sm-6 col-xs-12">
-<div class="box">
-<div class="icon"><img src="https://shinhan.com.vn/public/uploads/corporate/Evidence-of-property-ownership-if-any.png" alt="" /></div>
-<p>Chứng từ sở hữu tài sản hoặc giấy tờ hợp lệ có liên quan (nếu có)</p>
+<div class="col-sm-8 col-xs-12">
+<p>Thẻ tín dụng doanh nghiệp Shinhan Visa</p>
+<p>Thẻ tín dụng doanh nghiệp Kocham - Shinhan</p>
+<p>Thẻ tín dụng doanh nghiệp Korcham - Shinhan</p>
 </div>
 </div>
 </div>
 </div>
-</div>					</div>
- </div>
-      </div>
-    <div class="col-md-3 col-sm-12 col-xs-12">
-       
-<div class="widget-ct widget-categories mb-30" style="margin-top: 15px;">
+</div>
+<div class="box-type row">
+<div class="col-xs-12">
+<div class="box-list-dots">
+<div class="row">
+<div class="title-num col-sm-4 col-xs-12">
+<div class="num">3</div>
+<h5><strong>Thời hạn chương trình:</strong></h5>
+</div>
+<strong>chia làm 02 giai đoạn</strong></div>
+<div class="row">
+<p>Giai đoạn 1: Từ 15/09/2020 đến 14/10/2020</p>
+<p>Giai đoạn 2: Từ 15/10/2020 đến 15/11/2020</p>
+</div>
+</div>
+</div>
+</div>
+<div class="box-type row">
+<div class="col-xs-12">
+<div class="box-list-dots">
+<div class="row">
+<div class="title-num col-sm-4 col-xs-12">
+<div class="num">4</div>
+<h5><strong>Điều kiện và điều khoản áp dụng:</strong></h5>
+</div>
+<p>Vui lòng tham khảo <a class=" link_internal" href="https://shinhan.com.vn/public/uploads/Mebership_PDF/T%26C_Corp%20Spending_2020_VNE.pdf">tại đây</a></p>
+</div>
+</div>
+</div>
+</div></p>              
+            </div>
+            
+            
+       </div>
+       <div class="commentnews">
+         <div class="tab-pane" id="reviews">
+                <div class="pro-tab-info pro-reviews" style="border: 1px solid #eaeaea;">
+                <!-- gui bình luận -->
+                <div class="leave-review">
+                <h3 class="small-title">Bình luận về tin tức này</h3>
+                <div class="reply-box">
+                <div class="form-horizontal">
+                <div class="form-group">
+                <div class="col-md-6">
+                <input class="form-control" type="text" name="Name" placeholder="Tên người bình luận" id="commentnameuser">
+                </div>
+                <div class="col-md-6">
+                <input class="form-control" name="subject" type="text" placeholder="Số Phone (Không bắt buộc)" id="commentphoneuser">
+                </div>
+                </div>
+                <div class="form-group">
+                <div class="col-md-12">
+                <textarea class="form-control input-lg" name="comment" rows="4" placeholder="Nội dung bình luận" id="binhluansanpham"></textarea>
+                </div>
+                </div>
+                <div class="form-group">
+                <div class="col-md-12">
+                <input type="hidden" value="/thoa-trai-nghiem" name="linkpr" id="linkpr"/>
+                <input type="hidden" value="63" name="idpr" id="idpr"/>
+               
+                <button class="btn-common-bl submitbinhluannews" type="button"><h2 style="font-size: 14px">Gửi Bình Luận</h2></button>
+                <div class="rating"></div>
+                </div>
+                </div>
+                </div>
+                </div>
+                </div>
+                <!-- end gửi bình luận -->
+                <div class="customer-review">
+                                <div class="pagecommentnew" idpagenew="1" idnew="63">
+                
+                </div>
+                <p class="xemthembinhluan xemthembinhluancmnew"><i class="fa fa-hand-o-right" aria-hidden="true"></i> Xem Thêm Bình luận</p>
+                
+                </div>
+                
+                 </div>
+         </div>
+       </div>
+   </div>
+   
+   <div class="col-lg-3">
+    <div class="widget-ct widget-categories mb-30" style="margin-top: 15px;">
     <div class="widget-s-title">
-    <h4>SẢN PHẨM DỊCH VỤ</h4>
+    <h4>SẢN PHẨM DỊCH VỤ SHINHANBANK</h4>
     </div>
     <ul id="accordion-category" class="product-cat">
-          <li><a href="/vay-tieu-dung">Vay Tiêu Dùng </a></li>
-         <li><a href="/the-tin-dung-shinhanbank">thẻ tín dụng shinhanbank </a></li>
-         <li><a href="/vay-the-chap-nha-dat">Vay Thế Chấp Nhà đất</a></li>
-         <li><a href="/ho-tro-cong-nhan-va-tu-doanh">Hỗ Trợ Công Nhân và Tự Doanh</a></li>
+          <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/vay-tieu-dung-">Vay Tiêu Dùng </a></li>
+         <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/the-tin-dung-shinhanbank-">thẻ tín dụng shinhanbank </a></li>
+         <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/vay-the-chap-nha-dat">Vay Thế Chấp Nhà đất</a></li>
+         <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/ho-tro-cong-nhan-va-tu-doanh">Hỗ Trợ Công Nhân và Tự Doanh</a></li>
        
     </ul>
 </div>
-      
-       <div class="title-news">Tin Liên Quan</div>
+       <!-- new -->
+        <div class="title-news">Tin Liên Quan</div>
     <div class="aside-content">
          			<div class="blog-list blog-image-list">
+				
+				<div class="loop-blog">
+					<div class="thumb-left">
+						<a href="/niem-tin-cua-nd">
+	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/34e6bd2320923ac2c0ef7e6189a20833.jpg" style="max-width:100%;" class="img-responsive" title="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan" alt="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan">
+					     </a>
+				    </div>
+				   <div class="name-right">
+							<h3><a href="/niem-tin-cua-nd" title="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan">Niềm tin của người dùng làm nên sức ...</a></h3>
+							<div class="date"><i class="fa fa-clock-o"></i> 16-09-2020</div>
+											
+				</div>
+			</div>
+	
+		</div>
+		<div class="clear"></div>
+					<div class="blog-list blog-image-list">
+				
+				<div class="loop-blog">
+					<div class="thumb-left">
+						<a href="/quy-khach-se-de-dang">
+	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/a249c6cb182ab86936dba6f1d289692e.jpg" style="max-width:100%;" class="img-responsive" title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank " alt="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">
+					     </a>
+				    </div>
+				   <div class="name-right">
+							<h3><a href="/quy-khach-se-de-dang" title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">Quý khách sẽ dễ dàng tiếp cận gói va...</a></h3>
+							<div class="date"><i class="fa fa-clock-o"></i> 16-09-2020</div>
+											
+				</div>
+			</div>
+	
+		</div>
+		<div class="clear"></div>
+					<div class="blog-list blog-image-list">
 				
 				<div class="loop-blog">
 					<div class="thumb-left">
@@ -192,13 +239,13 @@
 				
 				<div class="loop-blog">
 					<div class="thumb-left">
-						<a href="/niem-tin-cua-nd">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/34e6bd2320923ac2c0ef7e6189a20833.jpg" style="max-width:100%;" class="img-responsive" title="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan" alt="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan">
+						<a href="/rut-tien-td">
+	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/3b05f83f529e3602eef89682a41678db.jpg" style="max-width:100%;" class="img-responsive" title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG" alt="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">
 					     </a>
 				    </div>
 				   <div class="name-right">
-							<h3><a href="/niem-tin-cua-nd" title="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan">Niềm tin của người dùng làm nên sức ...</a></h3>
-							<div class="date"><i class="fa fa-clock-o"></i> 16-09-2020</div>
+							<h3><a href="/rut-tien-td" title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT Ư...</a></h3>
+							<div class="date"><i class="fa fa-clock-o"></i> 08-06-2020</div>
 											
 				</div>
 			</div>
@@ -239,60 +286,15 @@
 	
 		</div>
 		<div class="clear"></div>
-					<div class="blog-list blog-image-list">
-				
-				<div class="loop-blog">
-					<div class="thumb-left">
-						<a href="/thoa-trai-nghiem">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/279cf4dee50aae9998c6ec8e87e25e59.jpg" style="max-width:100%;" class="img-responsive" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)" alt="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">
-					     </a>
-				    </div>
-				   <div class="name-right">
-							<h3><a href="/thoa-trai-nghiem" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">Thỏa trải nghiệm - Hoàn triệu điểm (...</a></h3>
-							<div class="date"><i class="fa fa-clock-o"></i> 06-10-2020</div>
-											
-				</div>
-			</div>
-	
-		</div>
-		<div class="clear"></div>
-					<div class="blog-list blog-image-list">
-				
-				<div class="loop-blog">
-					<div class="thumb-left">
-						<a href="/rut-tien-td">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/3b05f83f529e3602eef89682a41678db.jpg" style="max-width:100%;" class="img-responsive" title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG" alt="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">
-					     </a>
-				    </div>
-				   <div class="name-right">
-							<h3><a href="/rut-tien-td" title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT Ư...</a></h3>
-							<div class="date"><i class="fa fa-clock-o"></i> 08-06-2020</div>
-											
-				</div>
-			</div>
-	
-		</div>
-		<div class="clear"></div>
-					<div class="blog-list blog-image-list">
-				
-				<div class="loop-blog">
-					<div class="thumb-left">
-						<a href="/quy-khach-se-de-dang">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/a249c6cb182ab86936dba6f1d289692e.jpg" style="max-width:100%;" class="img-responsive" title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank " alt="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">
-					     </a>
-				    </div>
-				   <div class="name-right">
-							<h3><a href="/quy-khach-se-de-dang" title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">Quý khách sẽ dễ dàng tiếp cận gói va...</a></h3>
-							<div class="date"><i class="fa fa-clock-o"></i> 16-09-2020</div>
-											
-				</div>
-			</div>
-	
-		</div>
-		<div class="clear"></div>
 		  </div>
-      </div>
-</div>     </div>
+      <!-- end -->
+   
+   </div>
+   
+   
+</div>
+</div>
+     </div>
          
 		 
  
@@ -300,7 +302,7 @@
    <div class="container">
       <div class="row">
 	     <div class="title-text-vaytindung title-mr-70">
-			        <h2>TẠI SAO NÊN CHỌN Shinhanbank</h2>
+			        <h2>TẠI SAO NÊN CHỌN TPBANK</h2>
 			     </div>
 				 <div class="col-md-4 col-sm-6 col-xs-12 paddingweb">
 		   <div class="item equalize">
@@ -339,16 +341,16 @@
 <div class="block-subscribe">
 <h3 class="widget-title">Giới Thiệu</h3>
 <p><p>24C Phan Đăng Lưu, Phường 6, Quận Bình Thạnh, HCM</p>
-<p>Hotline: 0707183645</p></p>
+<p>Hotline: 0862505919</p></p>
 </div>
 </div>
 <div class="col-md-3 col-sm-6">
 <h3 class="widget-title">SẢN PHẨM DỊCH VỤ SHINHANBANK</h3>
 <ul>
-      <li><a href="/vay-tieu-dung">Vay Tiêu Dùng </a></li>
-     <li><a href="/the-tin-dung-shinhanbank">thẻ tín dụng shinhanbank </a></li>
-     <li><a href="/vay-the-chap-nha-dat">Vay Thế Chấp Nhà đất</a></li>
-     <li><a href="/ho-tro-cong-nhan-va-tu-doanh">Hỗ Trợ Công Nhân và Tự Doanh</a></li>
+      <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/vay-tieu-dung-">Vay Tiêu Dùng </a></li>
+     <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/the-tin-dung-shinhanbank-">thẻ tín dụng shinhanbank </a></li>
+     <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/vay-the-chap-nha-dat">Vay Thế Chấp Nhà đất</a></li>
+     <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/ho-tro-cong-nhan-va-tu-doanh">Hỗ Trợ Công Nhân và Tự Doanh</a></li>
    
 </ul>
   </div>
@@ -541,3 +543,4 @@
 </div><a href="#" class="back-to-top">
 <i class="fa fa-arrow-up" aria-hidden="true"></i>
 </a>
+ 
