--- a/views/tung-bung-khai-truong.handlebars
+++ b/views/tung-bung-khai-truong.handlebars
@@ -8,155 +8,84 @@
                    <a href=""> Trang mữ</a>
                    <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                    <span class="current">Thời Trang Nam</span>  -->
-                   <a href="https://shinhanbankvay24h.com.vn/"><i class="icon-home"></i> Trang Chủ</a>
-                                           <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
-                       <a href="/san-pham-dich-vu-shinhanbank"> SẢN PHẨM DỊCH VỤ SHINHANBANK</a>
-                       
-                                        <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
-                   <span class="current">Vay Thế Chấp Nhà đất</span>
+                   <a href="/home"><i class="icon-home"></i> Trang Chủ</a>
+                                       <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
+                   <span class="current">Tin Tức</span>
                 </div>
             </div>
         </div>
     </div>
 </div>
 <div class="container" style="margin-bottom: 17px;background-color: white;padding: 3px;">
-         <div class="row" style="margin-top: 13px">
-    <div class="col-md-9 col-sm-12 col-xs-12">
-       <div class="title-text-vaytindung">
-			        <h2>Vay Thế Chấp Nhà đất</h2>
-					<div class="content-dichvu">
-					   <div id="gioi-thieu" class="box-type row">
-<div class="ct-left col-sm-4 col-xs-12">
-<h3 class="title-blue"><img src="/public/image/hinh%20anh%20shinhan.jpg" alt="" width="492" height="289" /></h3>
-<h3 class="title-blue">Giới thiệu</h3>
+         <div class="wrapnews" idnews="56" idshowqc="1">
+<div class="row">
+   <div class="col-lg-9">
+       <div class="post-content rsimg">
+            <h1 class="post-title"><a href="#">Tưng bừng khai trương, nhận nghìn quà tặng</a></h1>
+            
+            <div class="meta">
+            <span class="meta-part"><a href="#"><i class="fa fa-user" aria-hidden="true"></i> Admin</a></span>
+            <span class="meta-part"><a href="#"><i class="fa fa-calendar" aria-hidden="true"></i>  06-10-2020</a></span>
+            </div>
+            
+		<div class="intro-news">
+			   Tưng bừng khai trương, nhận nghìn quà tặng  
+			</div>
+            <div class="wrapcontent">
+              
+               <div class="title-num col-xs-12">
+<div class="num">1</div>
+<h5>Chi tiết chương trình:</h5>
+<p>Nhân dịp khai trương <a class=" link_internal" href="https://shinhan.com.vn/vi/branches?q=c%E1%BA%A7n+th%C6%A1" target="_blank" rel="noopener">Ngân hàng Shinhan – Chi nhánh Cần Thơ</a>, gửi đến khách hàng các quà tặng đặc biệt khi:</p>
+<p><strong>1. Mở tài khoản và đăng ký, kích hoạt Internet Banking</strong></p>
+<ul>
+<li>Thực hiện giao dịch từ 100.000 đồng đến 1.000.000 đồng: Móc khóa Shinhan</li>
+<li>Thực hiện giao dịch trên 1.000.000 đồng: Túi canvas</li>
+</ul>
+<p><strong>2. Gửi tiết kiệm kỳ hạn từ 03 tháng (*)</strong></p>
+<ul>
+<li>Gửi từ 2.000.000 đến 10.000.000 đồng: Móc khóa Shinhan</li>
+<li>Gửi từ 11.000.000 đến 50.000.000 đồng: Áo mưa Shinhan</li>
+<li>Gửi từ 51.000.000 đến 100.000.000 đồng: Túi canvas</li>
+<li>Gửi trên 100.000.000 đồng: Dù Shinhan</li>
+</ul>
+<p><strong>3. Mở thẻ tín dụng</strong></p>
+<ul>
+<li>Mở thẻ tín dụng hạng Chuẩn và chi tiêu tối thiểu 500.000 đồng trong vòng 30 ngày: Áo mưa Shinhan</li>
+<li>Mở thẻ tín dụng hạng Vàng và chi tiêu tối thiểu 500.000 đồng trong vòng 30 ngày: Túi canvas</li>
+<li>Mở thẻ tín dụng hạng Bạch Kim và chi tiêu tối thiểu 500.000 đồng trong vòng 30 ngày: Dù Shinhan</li>
+</ul>
+<p>(*) Quà tặng chỉ áp dụng cho các tài khoản tiết kiệm không rút trước hạn.</p>
 </div>
-<div class="ct-right col-sm-8 col-xs-12">
-<div class="text">
-<p>Bạn lo lắng lãi suất không ổn định hoặc thủ tục vay vốn quá phức tạp?<br />Chương trình ưu đãi lãi suất hấp dẫn từ Ngân hàng Shinhan sẽ là điểm tựa tài chính vững chắc để bạn an tâm bắt đầu hành trình an cư lạc nghiệp (*).</p>
+<div class="box-type row">
+<div class="col-xs-12">
+<div class="row">
+<div class="title-num col-sm-4 col-xs-12">
+<div class="num">2</div>
+<h5><strong>Thời hạn chương trình:</strong></h5>
 </div>
-<div class="list-number">
-<div class="item">
-<div class="t-left">
-<div class="line"> </div>
-<p class="t-small">LỰA CHỌN 1</p>
-</div>
-<div class="t-right">
-<div class="number">6,5<sup>%/năm</sup></div>
-<p class="t-bt">cố định năm đầu</p>
-</div>
-</div>
-<div class="item">
-<div class="t-left">
-<div class="line"> </div>
-<p class="t-small">LỰA CHỌN 2</p>
-</div>
-<div class="t-right">
-<div class="number">7,4<sup>%/năm</sup></div>
-<p class="t-bt">cố định 2 năm đầu</p>
-</div>
-</div>
-<div class="item">
-<div class="t-left">
-<div class="line"> </div>
-<p class="t-small">LỰA CHỌN 3</p>
-</div>
-<div class="t-right">
-<div class="number">8,0<sup>%/năm</sup></div>
-<p class="t-bt">cố định 3 năm đầu</p>
-</div>
-</div>
-<div class="item">
-<div class="t-left">
-<div class="line"> </div>
-<p class="t-small">LỰA CHỌN 4</p>
-</div>
-<div class="t-right">
-<div class="number">8,7<sup>%/năm</sup></div>
-<p class="t-bt">cố định 4 năm đầu</p>
-<p class="t-bt"><img src="/public/image/hinh%20anh%20shinhan%20%202.jpg" alt="" width="580" height="387" /></p>
+<p>Từ 17.09 đến 30.10.2020.</p>
 </div>
 </div>
 </div>
-<p>Đặc biệt, Ngân hàng Shinhan dành gói ưu đãi với lãi suất cực kỳ hấp dẫn cho các khách hàng có giao dịch thường xuyên với Ngân hàng Shinhan.</p>
-<p>(*) Liên hệ chi nhánh gần nhất để biết thêm chi tiết. Điều kiện và điều khoản áp dụng</p>
-<p>Lãi suất áp dụng từ 01/10/2020</p>
-<p><span style="color: #e03e2d; background-color: #3598db;"><span class="btn-main left"><a style="color: #e03e2d; background-color: #3598db;" href="../../">ĐĂNG KÝ VAY</a></span> </span></p>
+<div class="">
+<div class="box-type row">
+<div class="title-num col-xs-12">
+<div class="num">3</div>
+<h5>Điều kiện và điều khoản áp dụng.</h5>
 </div>
 </div>
-<div class="row-line"> </div>
-<div id="loi-ich" class="box-type row">
-<div class="ct-left col-sm-4 col-xs-12">
-<h3 class="title-blue">Lợi ích</h3>
-</div>
-<div class="ct-right col-sm-8 col-xs-12">
-<div class="tab-expand">
-<div class="item ">
-<div class="head">
-<div class="text">
-<p>Lãi suất ưu đãi linh hoạt, tính trên dư nợ giảm dần</p>
-</div>
-</div>
-</div>
-<div class="item ">
-<div class="head">
-<div class="text">
-<p>Tài trợ lên đến 70% giá trị tài sản đảm bảo</p>
-</div>
-</div>
-</div>
-<div class="item ">
-<div class="head">
-<div class="text">
-<p>Thời hạn vay dài lên đến 20 năm</p>
-</div>
-</div>
-</div>
-<div class="item ">
-<div class="head">
-<div class="text">
-<p>Dịch vụ chăm sóc, hỗ trợ khách hàng chu đáo</p>
-</div>
-</div>
-</div>
-</div>
-<div class="text">
-<p>*Áp dụng cho công dân cư trú tại Việt Nam (*) từ 18-65 tuổi<br />(*) Công dân Việt Nam và người nước ngoài theo quy định của Pháp luật</p>
-</div>
-</div>
-</div>
-<div class="row-line"> </div>
-<div id="ho-so-dang-ky" class="box-type row">
-<div class="ct-left col-sm-12 col-xs-12">
-<h3 class="title-blue">Hồ sơ đăng ký</h3>
-</div>
-<div class="ct-right col-sm-12 col-xs-12">
-<div class="list-item-required">
-<div class="item col-sm-6 col-xs-12">
-<div class="box">
-<div class="icon"><img src="https://shinhan.com.vn/public/uploads/corporate/Valid-ID-Passport.png" alt="" /></div>
-<p>CMND/Hộ chiếu còn hiệu lực</p>
-</div>
-</div>
-<div class="item col-sm-6 col-xs-12">
-<div class="box">
-<div class="icon"><img src="https://shinhan.com.vn/public/uploads/corporate/family-record-book-KT3-temporary-residence.png" alt="" /></div>
-<p>Sổ hộ khẩu thường trú/sổ tạm trú/KT3/giấy xác nhận tạm trú</p>
-</div>
-</div>
-<div class="item col-sm-6 col-xs-12">
-<div class="box">
-<div class="icon"><img src="https://shinhan.com.vn/public/uploads/corporate/Evidence-of-property-ownership-if-any.png" alt="" /></div>
-<p>Chứng từ sở hữu tài sản hoặc giấy tờ hợp lệ có liên quan (nếu có)</p>
-</div>
-</div>
-</div>
-</div>
-</div>					</div>
- </div>
-      </div>
-    <div class="col-md-3 col-sm-12 col-xs-12">
-       
-<div class="widget-ct widget-categories mb-30" style="margin-top: 15px;">
+</div></p>              
+            </div>
+            
+            
+            
+            
+       </div>
+   </div>
+   
+   <div class="col-lg-3">
+    <div class="widget-ct widget-categories mb-30" style="margin-top: 15px;">
     <div class="widget-s-title">
     <h4>SẢN PHẨM DỊCH VỤ</h4>
     </div>
@@ -168,19 +97,19 @@
        
     </ul>
 </div>
-      
-       <div class="title-news">Tin Liên Quan</div>
+       <!-- new -->
+         <div class="title-news">Tin Liên Quan</div>
     <div class="aside-content">
          			<div class="blog-list blog-image-list">
 				
 				<div class="loop-blog">
 					<div class="thumb-left">
-						<a href="/vay-tin-chap">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/ab03c4fdadadd4157f0073850ce3d832.png" style="max-width:100%;" class="img-responsive" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường." alt="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">
+						<a href="/vay-tin-chap-vay-tieu-dung">
+	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/a188add40d415a128d9b4ffbdb68f632.JPG" style="max-width:100%;" class="img-responsive" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank." alt="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">
 					     </a>
 				    </div>
 				   <div class="name-right">
-							<h3><a href="/vay-tin-chap" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">Vay tín chấp ngân hàng Shinhan Bank ...</a></h3>
+							<h3><a href="/vay-tin-chap-vay-tieu-dung" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">Vay tín chấp - Vay tiêu dùng ngân hà...</a></h3>
 							<div class="date"><i class="fa fa-clock-o"></i> 09-09-2020</div>
 											
 				</div>
@@ -192,12 +121,12 @@
 				
 				<div class="loop-blog">
 					<div class="thumb-left">
-						<a href="/niem-tin-cua-nd">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/34e6bd2320923ac2c0ef7e6189a20833.jpg" style="max-width:100%;" class="img-responsive" title="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan" alt="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan">
+						<a href="/quy-khach-se-de-dang">
+	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/a249c6cb182ab86936dba6f1d289692e.jpg" style="max-width:100%;" class="img-responsive" title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank " alt="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">
 					     </a>
 				    </div>
 				   <div class="name-right">
-							<h3><a href="/niem-tin-cua-nd" title="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan">Niềm tin của người dùng làm nên sức ...</a></h3>
+							<h3><a href="/quy-khach-se-de-dang" title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">Quý khách sẽ dễ dàng tiếp cận gói va...</a></h3>
 							<div class="date"><i class="fa fa-clock-o"></i> 16-09-2020</div>
 											
 				</div>
@@ -226,13 +155,13 @@
 				
 				<div class="loop-blog">
 					<div class="thumb-left">
-						<a href="/vay-tin-chap-vay-tieu-dung">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/a188add40d415a128d9b4ffbdb68f632.JPG" style="max-width:100%;" class="img-responsive" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank." alt="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">
+						<a href="/thoa-trai-nghiem">
+	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/279cf4dee50aae9998c6ec8e87e25e59.jpg" style="max-width:100%;" class="img-responsive" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)" alt="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">
 					     </a>
 				    </div>
 				   <div class="name-right">
-							<h3><a href="/vay-tin-chap-vay-tieu-dung" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">Vay tín chấp - Vay tiêu dùng ngân hà...</a></h3>
-							<div class="date"><i class="fa fa-clock-o"></i> 09-09-2020</div>
+							<h3><a href="/thoa-trai-nghiem" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">Thỏa trải nghiệm - Hoàn triệu điểm (...</a></h3>
+							<div class="date"><i class="fa fa-clock-o"></i> 06-10-2020</div>
 											
 				</div>
 			</div>
@@ -243,13 +172,13 @@
 				
 				<div class="loop-blog">
 					<div class="thumb-left">
-						<a href="/thoa-trai-nghiem">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/279cf4dee50aae9998c6ec8e87e25e59.jpg" style="max-width:100%;" class="img-responsive" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)" alt="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">
+						<a href="/vay-tin-chap">
+	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/ab03c4fdadadd4157f0073850ce3d832.png" style="max-width:100%;" class="img-responsive" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường." alt="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">
 					     </a>
 				    </div>
 				   <div class="name-right">
-							<h3><a href="/thoa-trai-nghiem" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">Thỏa trải nghiệm - Hoàn triệu điểm (...</a></h3>
-							<div class="date"><i class="fa fa-clock-o"></i> 06-10-2020</div>
+							<h3><a href="/vay-tin-chap" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">Vay tín chấp ngân hàng Shinhan Bank ...</a></h3>
+							<div class="date"><i class="fa fa-clock-o"></i> 09-09-2020</div>
 											
 				</div>
 			</div>
@@ -273,26 +202,15 @@
 	
 		</div>
 		<div class="clear"></div>
-					<div class="blog-list blog-image-list">
-				
-				<div class="loop-blog">
-					<div class="thumb-left">
-						<a href="/quy-khach-se-de-dang">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/a249c6cb182ab86936dba6f1d289692e.jpg" style="max-width:100%;" class="img-responsive" title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank " alt="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">
-					     </a>
-				    </div>
-				   <div class="name-right">
-							<h3><a href="/quy-khach-se-de-dang" title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">Quý khách sẽ dễ dàng tiếp cận gói va...</a></h3>
-							<div class="date"><i class="fa fa-clock-o"></i> 16-09-2020</div>
-											
-				</div>
-			</div>
-	
-		</div>
-		<div class="clear"></div>
 		  </div>
-      </div>
-</div>     </div>
+      <!-- end -->
+   
+   </div>
+   
+   
+</div>
+</div>
+     </div>
          
 		 
  
@@ -300,7 +218,7 @@
    <div class="container">
       <div class="row">
 	     <div class="title-text-vaytindung title-mr-70">
-			        <h2>TẠI SAO NÊN CHỌN Shinhanbank</h2>
+			        <h2>TẠI SAO NÊN CHỌN SHINHANBANK</h2>
 			     </div>
 				 <div class="col-md-4 col-sm-6 col-xs-12 paddingweb">
 		   <div class="item equalize">
@@ -338,8 +256,8 @@
 <div class="col-md-3 col-sm-6">
 <div class="block-subscribe">
 <h3 class="widget-title">Giới Thiệu</h3>
-<p><p>24C Phan Đăng Lưu, Phường 6, Quận Bình Thạnh, HCM</p>
-<p>Hotline: 0707183645</p></p>
+<p>
+<p>Hotline: 0862505919</p></p>
 </div>
 </div>
 <div class="col-md-3 col-sm-6">
@@ -358,10 +276,6 @@
       <input type="text" class="form-control textdangki" name="email" placeholder="Vui Lòng Nhập Email" style="margin-bottom: 5px">
       <button type="button" class="btn btn-common clickdangki">Đăng Kí</button>
 </div>
-</div>
-<div class="col-md-3 col-sm-6">
-     <h3 class="widget-title">Kết Nối Với Chúng Tôi</h3>
-     <div class="fb-page" data-href="https://www.facebook.com/H%E1%BB%97-tr%E1%BB%A3-vay-v%E1%BB%91n-ng%C3%A2n-h%C3%A0ng-100428818344689" data-tabs="timeline" data-height="120" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/H%E1%BB%97-tr%E1%BB%A3-vay-v%E1%BB%91n-ng%C3%A2n-h%C3%A0ng-100428818344689" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/H%E1%BB%97-tr%E1%BB%A3-vay-v%E1%BB%91n-ng%C3%A2n-h%C3%A0ng-100428818344689">Facebook</a></blockquote></div>
 </div>
 </div>
 </div>
